[package]
name = "pome"
version = "0.0.5"
edition = "2024"

[dependencies]
crossterm = "^0.29.0"
mlua = { version = "^0.11.6", features = ["lua55", "vendored", "serialize"] }
ratatui = {version = "^0.30.2", features = ["serde"]}
ropey = "^1.6.1"
serde = {version = "^1.0.228", features = ["derive"]}
